tests/common/snapshots/e2e_tests__common__visual_testing__Split View__single_file.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                                                             
 file1.txt                                                                                                              
    1 │ Content of file 1                                                                                              █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
file1.txt | Ln 0, Col 0 | Opened file1.txt                                                              Palette: Ctrl+P
