tests/common/snapshots/e2e_tests__common__visual_testing__Split View__two_files.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                                                             
 file1.txt                                                                                                              
    1 │ Content of file 1                                                                                              █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 file1.txt   file2.txt                                                                                                  
    1 │ Content of file 2                                                                                              █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
                                                                                                                       █
file2.txt | Ln 0, Col 0 | Opened file2.txt                                                              Palette: Ctrl+P
